--- a/Error Page/errorpage.html
+++ b/Error Page/errorpage.html
@@ -48,7 +48,11 @@
     <!--wrapper2-->
     <div class="wrapper2">
         <div class="black">
-            <h1>You've Been Bamboozled!!!</h1>
+            <div class="middle">
+            <button id="but" onclick="hell()">Click For Surpise!!</button>
+            <h1 id="prank"></h1>
+        </div>
+
         </div>
     </div>
 
@@ -57,7 +61,7 @@
     <div class="wrapper3">
         <h1>Sorry, Better Luck Next Time!!!!</h1>
     </div>
-
+   <script src="./page.js"></script>
 </body>
 
 </html>
